--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,17 @@
   --third-text-color: #2196f3;
   --third-bg-color: #2196f3;
   --social-icons-color: #afb1b8;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav .link,
+.contacts .link,
+svg,
+.social-icons-link,
+.clients-item,
+.section.portfolio,
+button {
+  transition: var(--transition);
 }
 
 body {
@@ -24,6 +35,10 @@ body {
 
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
+}
+
+img {
+  display: block;
 }
 
 .container {
@@ -115,7 +130,19 @@ body {
 }
 
 .nav .link.current {
+  position: relative;
   color: var(--third-text-color);
+}
+
+.nav .link.current::after {
+  position: absolute;
+  top: 55px;
+  left: 0;
+  width: 100%;
+  content: "";
+  height: 4px;
+  background-color: var(--third-text-color);
+  border-radius: 2px;
 }
 
 /* Contacts */
@@ -150,6 +177,53 @@ body {
 
 /* Heroic */
 
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop {
+  position: fixed;
+  opacity: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  width: 528px;
+  height: 581px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--primary-bg-white);
+}
+
+.button-modal-icon {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+
+  background-color: var(--primary-bg-white);
+  cursor: pointer;
+}
+
+.button-modal-icon:hover .modal-icon {
+  fill: var(--third-text-color);
+}
+
 .heroic {
   text-align: center;
   padding-top: 200px;
@@ -162,10 +236,8 @@ body {
     ),
     url(../img/hero-bg.jpg);
   background-repeat: no-repeat;
-  background-size: cover, cover;
+  background-size: cover;
   background-position: top center;
-  max-width: 1600px;
-  max-height: 600px;
 }
 
 .title {
@@ -293,7 +365,31 @@ body {
 }
 
 .section.about-us .item {
+  position: relative;
   width: 370px;
+}
+
+.modal-block {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.modal-text {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 27px 82px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-align: center;
+
+  color: var(--heroic-text-color);
 }
 
 .section.our-team {
@@ -330,6 +426,7 @@ body {
   list-style: none;
   width: 44px;
   height: 44px;
+  border-radius: 50%;
   background-color: var(--primary-bg-white);
 }
 
@@ -351,7 +448,6 @@ body {
 .social-icons-link:hover,
 .social-icons-link:focus {
   background-color: var(--third-bg-color);
-  border-radius: 50%;
 }
 
 .social-icons-link:hover .social-icons-item,
@@ -571,4 +667,35 @@ body {
 
 .list.projects .item:not(:nth-child(3n)) {
   margin-right: 30px;
+}
+
+.thumb {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 63px 24px;
+  background: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.thumb-photo {
+  position: relative;
+  overflow: hidden;
+}
+
+.projects-links:hover .thumb,
+.projects-links:focus .thumb {
+  transform: translateY(0%);
+  opacity: 1;
+}
+
+.thumb .text {
+  font-size: 18px;
+  line-height: 1.56;
+
+  color: var(--heroic-text-color);
 }
